--- a/html/evaluation.html
+++ b/html/evaluation.html
@@ -2,33 +2,17 @@
 <html>
 
 <head>
-
-        <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
-        <script>
-          // Initialize Firebase
-          var config = {
-            apiKey: "AIzaSyCRIlX6zSoHDlrJdozA_eI1dCuxoTfWNN8",
-            authDomain: "challenge-4-devs.firebaseapp.com",
-            databaseURL: "https://challenge-4-devs.firebaseio.com",
-            projectId: "challenge-4-devs",
-            storageBucket: "challenge-4-devs.appspot.com",
-            messagingSenderId: "764592048564"
-          };
-          firebase.initializeApp(config);
-        </script>
-        
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Cadastro de Avaliações</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+
 </head>
 
 <body>
 
     <form>
-        1. Em uma escala de 0 a 10, 
+        1. Em uma escala de 0 a 10,
         qual a probabilidade de você recomendar nosso produto/serviço a um amigo/conhecido?<br>
 
         <input type="radio" name="rating" value="0" checked> 0<br>
@@ -44,13 +28,22 @@
         <input type="radio" name="rating" value="10"> 10<br>
     </form>
     <form>
-    <p>Qual é o motivo dessa nota?</p>
-    <input type="text">
+        <p>Qual é o motivo dessa nota?</p>
+        <input type="text" id="question">
     </form>
     <form>
         Mês e ano de referência:
-        <input type="month" name="month-year">
+        <input type="month" name="monthYear" id="monthYear">
+
+        <button id="save">Salvar </button>
     </form>
+
+    <a href="index.html">Voltar para página inicial </a>
+
+    <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
+    <script src="../js/app.js"> </script>
+    <script src="../js/evaluation.js"></script>
+
 </body>
 
 </html>
