--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
   <h1> welcome </h1>
 
   <li><a href="insert_customer.html"> Cadastrar Cliente</a></li>
-
+  <li><a href="evaluation.html"> Cadastrar Avaliação</a></li>
   <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
   <script src="../js/app.js"> </script>
 </body>
