add function search customer.

--- a/html/index.html
+++ b/html/index.html
@@ -14,8 +14,20 @@
 <body>
   <h1> welcome </h1>
 
+  <!--
+    Divulgação do resultados
+Na aplicação deve ser possível visualizar o resultado de cada mês em que foi realizada uma avaliação.
+
+A meta é 80%, assim os resultados deverão ser exibidos da seguinte maneira:
+
+Em caso de meta atingida: Cor verde
+Em caso de meta dentro da tolerância (Entre 60% e 79,99%): Cor amarela
+Em caso de meta não atingida: Cor vermelha
+  -->
+
   <li><a href="insert_customer.html"> Cadastrar Cliente</a></li>
   <li><a href="evaluation.html"> Cadastrar Avaliação</a></li>
+  <li><a href="tests.html"> Testes</a></li>
   <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
   <script src="../js/app.js"> </script>
 </body>
