--- a/html/tests.html
+++ b/html/tests.html
@@ -17,11 +17,11 @@
         </tr>
         <tr>
             <td>Customer Name: </td>
-            <td><input type="text" name="customerName" id="customerName" /></td>
+            <td><input type="text" name="customerCompanyName" id="customerCompanyName" /></td>
         </tr>
         <tr>
             <td>Customer Contact: </td>
-            <td><input type="text" name="customerContact" id="customerContact" /></td>
+            <td><input type="text" name="customerNameContact" id="customerNameContact" /></td>
         </tr>
         <tr>
             <td>Customer Date: </td>
@@ -32,9 +32,12 @@
                 <input type="button" value="Salvar" onclick="saveCustomer();" />
                 <input type="button" value="Atualizar" onclick="updateCustomer();" />
                 <input type="button" value="Deletar" onclick="deleteCustomer();" />
+                <input type="button" value="Pesquisar" onclick="searchCustomerNameContact();" />
             </td>
         </tr>
     </table>
+
+    <a href="index.html">Voltar para página inicial </a>
 
     <h3>Lista de clientes</h3>
 
