--- a/html/insert_customer.html
+++ b/html/insert_customer.html
@@ -26,8 +26,21 @@
             <label for="customerDate">Data que se tornou cliente:</label>
             <input id="customerDate" name="customerDate" type="date" id="customerDate" placeholder="10/10/2010" required name=customerDate>
         </div>
-        <button id="save">Salvar </button>
+        <!-- <button id="save">Salvar </button> -->
+        <button id="save" onclick="saveCustomer();"> Salvar </button> 
+        <button id="update" onclick="updateCustomer();"> Atualizar </button>
+        <button id="delete" onclick="deleteCustomer();" > Deletar </button>
+        <button id="search" onclick="searchCustomerNameContact();" > Pesquisar </button>
     </form>
+
+    <tr>
+        <td colspan="2">
+            <input type="button" value="Salvar" onclick="saveCustomer();" />
+            <input type="button" value="Atualizar" onclick="updateCustomer();" />
+            <input type="button" value="Deletar" onclick="deleteCustomer();" />
+            <input type="button" value="Pesquisar" onclick="searchCustomerNameContact();" />
+        </td>
+    </tr>
 
     <table id="tableCustomers" border="1">
         <tr>
@@ -42,6 +55,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
     <script src="../js/app.js"> </script>
     <script src="../js/insert_customer.js"></script>
+    
 </body>
 
 </html>
